more color contrast error fixing

--- a/styles/small.css
+++ b/styles/small.css
@@ -176,6 +176,7 @@ footer {
     background-color: var(--deep-teal);
     padding: 1rem 10px;
     text-align: center;
+    color: white;
 
 }
 
@@ -200,8 +201,4 @@ footer {
 
 .social a:hover {
     border-bottom: solid 1px var(--deep-teal);
-}
-
-footer p {
-    color: white;
 }
